feat: Virtual threads took only 1659 ms to complete 10000 tasks with 1000 times context switch for each task after 10ms. This shows help we get by controlling the context switching via JVM instead of calling OS methods.